[bug 809572] Improve contrast.
Main nav and article listings.

--- a/media/less/products.less
+++ b/media/less/products.less
@@ -131,3 +131,10 @@
     }
   }
 }
+
+#document-list {
+  > ul {
+    background: #fff;
+    padding: 30px;
+  }
+}
